# layering-package-manager

./: .gitignore  Cargo.toml  README.md  lpm.spec  meson.build  pyproject.toml  requirements.txt  setup.cfg
lpm/: __init__.py  __main__.py  cli.py  dnf.py  rpm_ostree.py  rpmostree.py  utils.py
lpm/commands/: info.py  install.py  remove.py  search.py  update.py
lpm/commands/groups/: info.py  install.py  remove.py  search.py  update.py
lpm/handlers/: format_transaction.py  install_or_remove_packages.py  progress.py  update_packages.py
src/: main.py  main.py.in  main.rs  meson.build  rpm_ostree.rs  transaction.rs
