[package]
name = "layering-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-signals = "0.4.0"
async-std = { features = ["attributes"], version = "1.12.0" }
clap = { version = "3.2.22", features = ["derive"] }
futures-util = "0.3.24"
indicatif = "0.17.1"
zbus = "3.1.0"
