[package]
name = "layering-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
indicatif = { version = "0.17.1", features = ["tokio"] }
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = "0.1.10"
zbus = { version = "3.1.0", default-features = false, features = ["tokio"] }
