[tool.poetry]
name = "lpm"
version = "0.0.1"
description = ""
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.4.4"
dbus-next = "^0.2.3"
dbus-python = "^1.2.18"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
